--- a/css/arf.css
+++ b/css/arf.css
@@ -1,8 +1,11 @@
 body {
-  background-color: #1F1F1F;
+  background-color: #000;
   font-size: 14px;
   font-family: "Tahoma", Helvetica;
   color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: url('/5.png')
 }
 
 #body {
